--- a/server/src/web/views/class/class.hbs
+++ b/server/src/web/views/class/class.hbs
@@ -13,6 +13,9 @@
 
 <h5 class="mt-4 font-weight-light">
     <a href="/clase/{{class._id}}/elevi">elevi</a>
+    {{#if (eq class.name "7B")}}
+    | <a href="/clase/{{class._id}}/parinti">parinti</a>
+    {{/if}}
     {{#if (gt class.grade "4")}}
     |
     <a href="/clase/{{class._id}}/profesori">profesori</a> |
