--- a/server/src/web/views/parent/parents.hbs
+++ b/server/src/web/views/parent/parents.hbs
@@ -8,35 +8,42 @@
 <h1>Parinti</h1>
 
 {{!-- <div class="container-fluid"> --}}
-    <div class="row">
-        <div class="col-md-12">
+<div class="row">
+    <div class="col-md-12">
 
-            <table class="table thead-light table-bordered table-light2 table-hover mb-5">
-                <thead>
-                    <tr>
-                        <th>Nume parinte</th>
-                        <th>Email</th>
-                        <th>Copii</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {{#each parents}}
-                    <tr>
-                        <td>
-                            <a href="/parinti/{{_id}}">{{firstName}} {{lastName}}
-                        </td>
-                        <td>{{email}}</td>
-                        <td>
-                            {{#each students}}
+        <table class="table thead-light table-bordered table-light2 table-hover mb-5">
+            <thead>
+                <tr>
+                    <th>Nume parinte</th>
+                    <th>Email</th>
+                    <th>Copii</th>
+                </tr>
+            </thead>
+            <tbody>
+                {{#each parents}}
+                <tr>
+                    <td>
+                        <a href="/parinti/{{_id}}">{{lastName}} {{firstName}}
+                    </td>
+                    <td>{{email}}</td>
+                    <td>
+                        {{!-- {{#each students}}
                                 <div><a href="/elevi/{{id}}">{{firstName}} {{lastName}}</div>
+                            {{/each}} --}}
+                        <ul class="pl-3 mb-0">
+                            {{#each students }}
+                            <li>
+                                <a href="/elevi/{{id}}">{{lastName}} {{firstName}}</a>
+                            </li>
                             {{/each}}
-                        </td>
-                    </tr>
-                    {{/each}}
-                </tbody>
-            </table>
-
-        </div>
+                        </ul>
+                    </td>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
 
     </div>
+
+</div>
 {{!-- </div> --}}
