--- a/server/src/web/views/student/student.hbs
+++ b/server/src/web/views/student/student.hbs
@@ -65,7 +65,7 @@
     </tbody>
 </table>
 
-<a href="/parinti">Vezi tot catalogul</a>
+<a href="/elevi/{{student._id}}/catalog">Editeaza catalogul</a>
 
 {{!-- <h5 class="mt-4">Absente <span class="font-weight-light text-secondary">(inregistrate in ultimele 2 saptamani)</span>:
 </h5>
