--- a/server/src/web/views/layouts/main.hbs
+++ b/server/src/web/views/layouts/main.hbs
@@ -39,8 +39,6 @@
 
     {{{_sections.script}}}
 
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
-
 </head>
 
 
@@ -48,7 +46,7 @@
     {{> navbar ctx }}
 
     <main role="main" class="container">
-        {{!toJson ctx}}
+        {{!toJSON ctx}}
         {{{body}}}
     </main>
 </body>
