add support for delete gradebook item

--- a/server/src/web/views/student/student-catalog.hbs
+++ b/server/src/web/views/student/student-catalog.hbs
@@ -118,14 +118,14 @@
             <li id={{itemId}}>
                 <span>{{itemValue}}</span>
                 <span class="text-muted">/ {{itemDate}}</span>
-                <button type="button" class="btn btn-link">Sterge</button>
+                <button type="button" class="btn btn-link btn-delete">Sterge</button>
             </li>
             {{/each}}
         </ul>
 
         <div class="marks-create-container ml-4">
             <div class="form-inline">
-                <input type="number" class="form-control form-control-sm mark-value" style="width:50px">
+                <input type="number" class="form-control form-control-sm mark-value" style="width:70px">
                 <span class="text-muted text-center" style="width:12px"> / </span>
                 <input type="number" class="form-control form-control-sm mark-date" style="width:100px">
                 <button class="btn btn-primary btn-sm ml-2 add-mark-btn">Adauga nota</button>
@@ -137,7 +137,7 @@
     <div class="sem-test-paper-container  ml-4 mt-4">
         <div class="font-weight-bold">Teza:</div>
         <div class="ml-4 form-inline">
-            <input type="number" class="form-control form-control-sm" style="width:50px">
+            <input type="number" class="form-control form-control-sm" style="width:70px">
             <button type="submit" class="btn btn-primary btn-sm ml-2" style="width:120px">Adauga teza</button>
         </div>
     </div>
@@ -145,7 +145,7 @@
     <div class="sem-average-container  ml-4 mt-4">
         <div class="font-weight-bold">Media:</div>
         <div class="ml-4 form-inline">
-            <input type="number" class="form-control form-control-sm" style="width:50px">
+            <input type="number" class="form-control form-control-sm" style="width:70px">
             <button type="submit" class="btn btn-primary btn-sm ml-2" style="width:120px">Adauga media</button>
         </div>
     </div>
