--- a/server/src/web/views/student/student-catalog.hbs
+++ b/server/src/web/views/student/student-catalog.hbs
@@ -131,6 +131,153 @@
                 <button class="btn btn-primary btn-sm ml-2 add-mark-btn">Adauga nota</button>
             </div>
             <small class="text-muted">Ex: 8 / 17.04</small>
+            <br>
+            Nota:
+            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-warning active">
+                    <input type="radio" name="options" id="option1" autocomplete="off" checked> 1
+                </label>
+                <label class="btn btn-warning">
+                    <input type="radio" name="options" id="option2" autocomplete="off"> 2
+                </label>
+                <label class="btn btn-warning">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 3
+                </label>
+                <label class="btn btn-warning">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 4
+                </label>
+                <label class="btn btn-warning">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 5
+                </label>
+                <label class="btn btn-warning">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 6
+                </label>
+                <label class="btn btn-warning">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 7
+                </label>
+                <label class="btn btn-warning">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 8
+                </label>
+                <label class="btn btn-warning">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 9
+                </label>
+                <label class="btn btn-warning">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 10
+                </label>
+            </div>
+
+            <br>
+            <br>
+            Ziua:
+            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-light active">
+                    <input type="radio" name="options" id="option1" autocomplete="off" checked> 1
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option2" autocomplete="off"> 2
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 3
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 4
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 5
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 6
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 7
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 8
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 9
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 10
+                </label>
+
+
+
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option1" autocomplete="off"> 1
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option2" autocomplete="off"> 2
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 3
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 4
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 5
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 6
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 7
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 8
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 9
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> 10
+                </label>
+
+            </div>
+
+
+            <br>
+            <br>
+            Luna:
+            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-light active">
+                    <input type="radio" name="options" id="option1" autocomplete="off" checked> I
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option2" autocomplete="off"> II
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> III
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> IV
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> V
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> VI
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> VII
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> VIII
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> IX
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> X
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> XI
+                </label>
+                <label class="btn btn-light">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> XII
+                </label>
+            </div>
         </div>
     </div>
 
